# Youtube-downloader-converter

./: .gitignore  ALERTAS_README.md  LICENSE  README.md  build.py  debug_build.py  main.py  pyproject.toml  release.ps1  requirements.txt  style.qss  test_executable.py  test_resources.py
.github/workflows/: build-and-release.yml
app/: __init__.py  main_window.py  sidebar.py  utils.py
app/pages/: __init__.py  converter_page.py  downloads_page.py  settings_page.py
